feat: update all code tabs

--- a/src/pages/components/UI-shell-right-panel/code.mdx
+++ b/src/pages/components/UI-shell-right-panel/code.mdx
@@ -4,6 +4,39 @@ description: This right panel is part of the Carbon UI shell. A shell is a colle
 tabs: ["Usage", "Style", "Code"]
 ---
 
+<PageDescription>
+
+Preview the ui shell right panel in React. For detailed code usage documentation, see the Storybooks for each framework below.
+
+</PageDescription>
+
+## Documentation
+
+<Row className="resource-card-group">
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+    subTitle="React"
+    href="https://react.carbondesignsystem.com/?path=/story/ui-shell--header-base-w-actions-and-right-panel"
+    >
+
+<MdxIcon name="react" />
+
+  </ResourceCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+      subTitle="Angular (Community)"
+      href="https://angular.carbondesignsystem.com/?path=/story/components-ui-shell--right-panel-with-router"
+      >
+
+<MdxIcon name="angular" />
+
+  </ResourceCard>
+</Column>
+</Row>
+
+## Live demo
+
 ## Right panel
 
 <Row>
