--- a/src/pages/components/notification/usage.mdx
+++ b/src/pages/components/notification/usage.mdx
@@ -1,7 +1,7 @@
 ---
 title: Notification
 description: Notifications are messages that communicate information to the user. The two main types of notifications are toast notifications and inline notifications.
-tabs: ["Code", "Usage", "Style", " Accessibility"]
+tabs: ["Usage", "Style", "Code", "Accessibility"]
 ---
 
 <PageDescription>
