--- a/src/pages/components/UI-shell-header/code.mdx
+++ b/src/pages/components/UI-shell-header/code.mdx
@@ -45,7 +45,7 @@ Preview the ui shell header in React. For detailed code usage documentation, see
 </Column>
 </Row>
 
-## Live demo
+## Demo
 
 ## Header base
 
