--- a/src/pages/components/UI-shell-left-panel/code.mdx
+++ b/src/pages/components/UI-shell-left-panel/code.mdx
@@ -45,7 +45,7 @@ Preview the ui shell left panel in React. For detailed code usage documentation,
 </Column>
 </Row>
 
-## Live demo
+## Demo
 
 ## Fixed side-nav
 
