--- a/src/pages/components/UI-shell-right-panel/code.mdx
+++ b/src/pages/components/UI-shell-right-panel/code.mdx
@@ -35,7 +35,7 @@ Preview the ui shell right panel in React. For detailed code usage documentation
 </Column>
 </Row>
 
-## Live demo
+## Demo
 
 ## Right panel
 
