testing vercel deployment preview

--- a/src/pages/guidelines/accessibility/developers.mdx
+++ b/src/pages/guidelines/accessibility/developers.mdx
@@ -1,13 +1,20 @@
 ---
-label: IBM firmly believes that web and software experiences should be accessible for everyone, regardless of abilities or impairments.
+label:
+  IBM firmly believes that web and software experiences should be accessible for
+  everyone, regardless of abilities or impairments.
 title: Accessibility
-description: IBM firmly believes that web and software experiences should be accessible for everyone. Carbon is committed to following best practices when it comes to accessibility.
+description:
+  IBM firmly believes that web and software experiences should be accessible for
+  everyone. Carbon is committed to following best practices when it comes to
+  accessibility.
 tabs: ["Overview", "Color", "Developers", "Keyboard"]
 ---
 
 <PageDescription>
 
-Write code that is clear and logical. Be detailed in alt text and image descriptions, and at each step consider users who experience your product through alternative technologies.
+Write code that is clear and logical. Be detailed in alt text and image
+descriptions, and at each step consider users who experience your product
+through alternative technologies.
 
 </PageDescription>
 
@@ -15,7 +22,6 @@ Write code that is clear and logical. Be detailed in alt text and image descript
 
 <AnchorLink>HTML best practices</AnchorLink>
 <AnchorLink>CSS best practices</AnchorLink>
-<AnchorLink>Mouse-specific events</AnchorLink>
 
 </AnchorLinks>
 
@@ -23,11 +29,20 @@ Write code that is clear and logical. Be detailed in alt text and image descript
 
 ### Structuring code and navigation
 
-Think of code hierarchy when structuring your content. Be sure screen readers and keyboard-only users can access interactive elements in a logical and predictable order via tabbing. Begin with the header, followed by the main navigation, then page navigation (from left to right, top to bottom), and end with the footer. Keyboard users should encounter an intentional experience that is comparable to the experience of mouse users.
+Think of code hierarchy when structuring your content. Be sure screen readers
+and keyboard-only users can access interactive elements in a logical and
+predictable order via tabbing. Begin with the header, followed by the main
+navigation, then page navigation (from left to right, top to bottom), and end
+with the footer. Keyboard users should encounter an intentional experience that
+is comparable to the experience of mouse users.
 
 ### Use semantic HTML
 
-Use native HTML elements as much as you can. These elements have built-in accessibility benefits. They inform screen readers what they are and what they do, and standard interactive elements, such as a button, include keyboard functionality. Aside from making a page accessible, native HTML is easier to develop and maintain, better on mobile, and improves search engine optimization.
+Use native HTML elements as much as you can. These elements have built-in
+accessibility benefits. They inform screen readers what they are and what they
+do, and standard interactive elements, such as a button, include keyboard
+functionality. Aside from making a page accessible, native HTML is easier to
+develop and maintain, better on mobile, and improves search engine optimization.
 
 ```html
 <button>Play Video</button>
@@ -42,7 +57,11 @@ Use native HTML elements as much as you can. These elements have built-in access
 
 ### Use clear language
 
-When adding content, consider cognitive disabilities, anyone whose native language isn’t the language your content is written in, and screen readers. When possible, avoid dashes, abbreviations, acronyms (at least the first time), and table layouts if a table is not needed. If abbreviating, use the native `<abbr />` element with title attribute.
+When adding content, consider cognitive disabilities, anyone whose native
+language isn’t the language your content is written in, and screen readers. When
+possible, avoid dashes, abbreviations, acronyms (at least the first time), and
+table layouts if a table is not needed. If abbreviating, use the native
+`<abbr />` element with title attribute.
 
 ```html
 "9 to 5" "November" <abbr title="November">Nov</abbr>
@@ -50,7 +69,8 @@ When adding content, consider cognitive disabilities, anyone whose native langua
 
 ### Use meaningful text labels
 
-Consider visually impaired people when labeling elements. Make sure there is textual context for screen readers.
+Consider visually impaired people when labeling elements. Make sure there is
+textual context for screen readers.
 
 <Title>Correct</Title>
 
@@ -66,7 +86,10 @@ Consider visually impaired people when labeling elements. Make sure there is tex
 
 ### Designing accessible data tables
 
-Always specify table headers with `<th />` elements, and make sure they stand out. Utilize `scope` attributes if necessary to specify if they are headers for rows or columns. Utilize alternative text along with tables for visually impaired users. `<caption />` is preferred, but `<table />` summary works too.
+Always specify table headers with `<th />` elements, and make sure they stand
+out. Utilize `scope` attributes if necessary to specify if they are headers for
+rows or columns. Utilize alternative text along with tables for visually
+impaired users. `<caption />` is preferred, but `<table />` summary works too.
 
 ```html
 <table summary="Names and Ages of My Coworkers">
@@ -97,11 +120,16 @@ Always specify table headers with `<th />` elements, and make sure they stand ou
 
 ### Designing accessible data visualizations
 
-Consider visually impaired users when including data visualizations. Consider accompanying visuals with a data table as an alternative for users who rely on screen readers. Also consider color choices for color-blind users.
+Consider visually impaired users when including data visualizations. Consider
+accompanying visuals with a data table as an alternative for users who rely on
+screen readers. Also consider color choices for color-blind users.
 
 ### Multimedia text alternatives
 
-Every image that is not decorative must include `alt` text with a meaningful description of the image. If the image is decorative, use an empty `alt` attribute; otherwise the screen reader will read the whole image URL if the `alt` is left out.
+Every image that is not decorative must include `alt` text with a meaningful
+description of the image. If the image is decorative, use an empty `alt`
+attribute; otherwise the screen reader will read the whole image URL if the
+`alt` is left out.
 
 <Title>Be detailed and succinct</Title>
 
@@ -139,9 +167,15 @@ Use SVG's instead of font icon libraries.
 
 ### Utilize ARIA roles and landmark roles
 
-ARIA (Accessible Rich Internet Application) roles convey the intent or meaning of an element to assistive technology. This helps users navigate when they can't see the layout and provides further context about different functionalities.
+ARIA (Accessible Rich Internet Application) roles convey the intent or meaning
+of an element to assistive technology. This helps users navigate when they can't
+see the layout and provides further context about different functionalities.
 
-Landmark roles identify regions in a page, and act much like native HTML tags would when it comes to semantics. Signpost roles describe other information about a given element's functionality on a page. These are especially helpful when building complex, custom interfaces or to reinforce semantics in native HTML elements.
+Landmark roles identify regions in a page, and act much like native HTML tags
+would when it comes to semantics. Signpost roles describe other information
+about a given element's functionality on a page. These are especially helpful
+when building complex, custom interfaces or to reinforce semantics in native
+HTML elements.
 
 <Title>Landmark roles</Title>
 
@@ -164,15 +198,19 @@ Landmark roles identify regions in a page, and act much like native HTML tags wo
 
 ### CSS rule of thumb
 
-You can style a page feature to fit your design, but don't change it to the point that it doesn't look or behave as expected.
+You can style a page feature to fit your design, but don't change it to the
+point that it doesn't look or behave as expected.
 
 ### Style focus indicators
 
-Add styling to tabbable elements on hover and focus, so that keyboard-only users can have a clear visual of where they are navigating. Never suppress the focus indicator altogether.
+Add styling to tabbable elements on hover and focus, so that keyboard-only users
+can have a clear visual of where they are navigating. Never suppress the focus
+indicator altogether.
 
 ### Hiding elements
 
-When hiding content from a screen reader, consider source order. Use `visibility: hidden`, along with `display: none` in your CSS.
+When hiding content from a screen reader, consider source order. Use
+`visibility: hidden`, along with `display: none` in your CSS.
 
 ## Mouse-specific events
 
