--- a/src/pages/components/UI-shell-header/code.mdx
+++ b/src/pages/components/UI-shell-header/code.mdx
@@ -6,7 +6,7 @@ tabs: ["Usage", "Style", "Code", "Accessibility"]
 
 <PageDescription>
 
-Preview the ui shell header in React. For detailed code usage documentation, see the Storybooks for each framework below.
+Preview the UI shell header in React. For detailed code usage documentation, see the Storybooks for each framework below.
 
 </PageDescription>
 
