--- a/src/pages/components/UI-shell-right-panel/code.mdx
+++ b/src/pages/components/UI-shell-right-panel/code.mdx
@@ -6,7 +6,7 @@ tabs: ["Usage", "Style", "Code"]
 
 <PageDescription>
 
-Preview the ui shell right panel in React. For detailed code usage documentation, see the Storybooks for each framework below.
+Preview the UI shell right panel in React. For detailed code usage documentation, see the Storybooks for each framework below.
 
 </PageDescription>
 
