Update urls to Sketch libraries (short ones are being depreciated)

--- a/src/pages/get-started/design/sketch.mdx
+++ b/src/pages/get-started/design/sketch.mdx
@@ -34,7 +34,7 @@ There are [four Carbon themes](/guidelines/color/overview#themes), two light (Wh
     <ResourceCard
       onClick={() => fathom("trackGoal", "P0OEN9TS", 0)}
       subTitle="Get the White theme"
-      href="sketch://add-library/cloud/JaVzz"
+      href="sketch://add-library/cloud/557b75ff-67d3-41ab-ada5-fa25447218c1"
     >
       <MdxIcon name="sketch" />
     </ResourceCard>
@@ -43,7 +43,7 @@ There are [four Carbon themes](/guidelines/color/overview#themes), two light (Wh
     <ResourceCard
       onClick={() => fathom("trackGoal", "T7D1HJ3L", 0)}
       subTitle="Get the Gray 10 theme"
-      href="sketch://add-library/cloud/Onwv2"
+      href="sketch://add-library/cloud/b4ea2a21-4b1a-4c64-99dc-a1365eff5d5f"
     >
       <MdxIcon name="sketch" />
     </ResourceCard>
@@ -52,7 +52,7 @@ There are [four Carbon themes](/guidelines/color/overview#themes), two light (Wh
     <ResourceCard
       onClick={() => fathom("trackGoal", "LYFJTPDE", 0)}
       subTitle="Get the Gray 90 theme"
-      href="sketch://add-library/cloud/eo37p"
+      href="sketch://add-library/cloud/a324c6dd-df97-435e-b79f-3a29e04922fc"
     >
       <MdxIcon name="sketch" />
     </ResourceCard>
@@ -61,7 +61,7 @@ There are [four Carbon themes](/guidelines/color/overview#themes), two light (Wh
     <ResourceCard
       onClick={() => fathom("trackGoal", "3XH0SIBJ", 0)}
       subTitle="Get the Gray 100 theme"
-      href="sketch://add-library/cloud/d13Ll"
+      href="sketch://add-library/cloud/9d47a4fd-70dd-44ff-bc57-22c79da8e477"
     >
       <MdxIcon name="sketch" />
     </ResourceCard>
@@ -79,7 +79,7 @@ Additional color collections live in the IBM Design Language library. Icons live
   <Column colMd={4} colLg={4} noGutterSm>
     <ResourceCard
       subTitle="Get the IBM Design Language"
-      href="sketch://add-library/cloud/nwqmk"
+      href="sketch://add-library/cloud/4f1cbe6c-6626-405e-8c46-a9ae41a30cba"
     >
       <MdxIcon name="sketch" />
     </ResourceCard>
@@ -87,7 +87,7 @@ Additional color collections live in the IBM Design Language library. Icons live
   <Column colMd={4} colLg={4} noGutterSm>
     <ResourceCard
       subTitle="Get the IBM Icons (16px, 20px)"
-      href="sketch://add-library/cloud/KW2yr"
+      href="sketch://add-library/cloud/028e0598-591e-428c-a490-f6ec64b15ea7"
     >
       <MdxIcon name="sketch" />
     </ResourceCard>
@@ -95,7 +95,7 @@ Additional color collections live in the IBM Design Language library. Icons live
   <Column colMd={4} colLg={4} noGutterSm>
     <ResourceCard
       subTitle="Get the IBM Icons (24px, 32px)"
-      href="sketch://add-library/cloud/2bwkM"
+      href="sketch://add-library/cloud/d530998a-c94c-4f1c-bc0e-c05417e067e3"
     >
       <MdxIcon name="sketch" />
     </ResourceCard>
@@ -107,13 +107,13 @@ Additional color collections live in the IBM Design Language library. Icons live
 
 #### 4. **Download the grid templates**.
 
-Visit the [Sketch library](https://sketch.cloud/s/ngV7z) page and choose `Download Document` from the right-side panel.
+Visit the [Sketch library](https://www.sketch.com/s/3a3f3f2d-94d7-4c16-8e2e-88ba80a6382e) page and choose `Download Document` from the right-side panel.
 
 <Row className="resource-card-group">
   <Column colLg={4} colMd={4} noGutterSm>
     <ResourceCard
       subTitle="Download the IBM Grid template"
-      href="https://sketch.cloud/s/ngV7z"
+      href="https://www.sketch.com/s/3a3f3f2d-94d7-4c16-8e2e-88ba80a6382e"
     >
       <MdxIcon name="sketch" />
     </ResourceCard>
@@ -121,7 +121,7 @@ Visit the [Sketch library](https://sketch.cloud/s/ngV7z) page and choose `Downlo
   <Column colLg={4} colMd={4} noGutterSm>
     <ResourceCard
       subTitle="Download the UI Shell template"
-      href="https://sketch.cloud/s/EjVmA"
+      href="https://www.sketch.com/s/6a8e1d7b-f00a-4d8d-9d83-79ecf4dc12a0"
     >
       <MdxIcon name="sketch" />
     </ResourceCard>
@@ -151,7 +151,7 @@ Refer to the content below for a more detailed breakdown of the kit, or head to 
 
 ## Anatomy
 
-See the [Sketch library](https://sketch.cloud/s/JaVzz/) page for an overview of the kit.
+See the [Sketch library](https://www.sketch.com/s/557b75ff-67d3-41ab-ada5-fa25447218c1) page for an overview of the kit.
 
 <AnchorLinks small>
 
