docs: update all component code tabs (#1459)
* docs(accordion): update code tab

* chore: typo

* chore: update links

* chore: add heading

* docs: update

* docs: update page description

* chore: typo on resources page

* feat: update all code tabs

* docs: typo

* Update src/pages/components/UI-shell-header/code.mdx

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

* Update src/pages/components/UI-shell-right-panel/code.mdx

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

* Update src/pages/components/UI-shell-left-panel/code.mdx

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>
Co-authored-by: TJ Egan <tw15egan@gmail.com>

--- a/src/pages/resources/index.mdx
+++ b/src/pages/resources/index.mdx
@@ -91,17 +91,27 @@ Everything you need to work with, learn about, and contribute to Carbon.
     href="http://react.carbondesignsystem.com/"
     >
 
-![](images/react-icon.png)
+<MdxIcon name="react" />
 
   </ResourceCard>
 </Column>
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
-      subTitle="Carbon Components Vue Storybook"
+      subTitle="Carbon Vue Storybook"
       href="http://vue.carbondesignsystem.com/"
       >
 
-![](images/vue-icon.png)
+<MdxIcon name="vue" />
+
+  </ResourceCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+      subTitle="Carbon Angular Storybook"
+      href="http://angular.carbondesignsystem.com/"
+      >
+
+<MdxIcon name="angular" />
 
   </ResourceCard>
 </Column>
