feat(project): add support for community index page

--- a/src/pages/community/component-index.mdx
+++ b/src/pages/community/component-index.mdx
@@ -1,8 +1,8 @@
 ---
-title: Component Index
-Description: Hello there
+title: Component index
+description: Hello there
 ---
 
-import ComponentIndex from "../../components/ComponentIndex";
+import ComponentIndexPage from "../../components/ComponentIndexPage";
 
-<ComponentIndex />
+<ComponentIndexPage />
