--- a/src/pages/guidelines/pictograms/contribute.mdx
+++ b/src/pages/guidelines/pictograms/contribute.mdx
@@ -52,14 +52,14 @@ Don’t see the pictogram you need in the library? Make your own! Follow these g
 
 1. Draw a 32 x 32 px artboard. 32 px pictograms should have 1 px padding.
 1. Place the pictogram squarely on the artboard, making sure it’s aligned to the pixel grid.
-1. Convert all strokes to outlines `Shift + ⌘ + `.
+1. Convert all strokes to outlines `Shift + ⌘ + O`.
 1. Select any overlapping shapes and click the `Union` icon from the top navigation to merge all of the shapes together.
 1. Make sure the icon is at `#000000` and has no additional styling.
 1. Select the entire artboard (not just the icon).
 1. Click `Make Exportable` at the bottom of the right toolbar in Sketch.
-1. In the Export widget select `SVG` in the format dropdown.
+1. In the `Export` widget select `SVG` in the format dropdown.
 1. Click `Export ‘Artboard-Name’`.
-1. Name icon with the `#name--modifier` convention. (ex. copy.svg, copy—glyph.svg, add.svg, add—glyph.svg).
+1. Name icon with the `#name--modifier` convention (ex. copy.svg, copy—glyph.svg, add.svg, add—glyph.svg).
 
 ### Export SVGs from Adobe Illustrator.
 
@@ -74,7 +74,6 @@ Don’t see the pictogram you need in the library? Make your own! Follow these g
 1. Click `Save`.
 1. The `SVG Options` dialog will then open.
 1. Make sure the preferences are the same as in the image below.
-1. SVG export options image
 
 <Row>
 <Column colMd={6} colLg={6}>
