remove line from list + correwct typo

--- a/src/pages/how-to-contribute/contribute-pictograms.mdx
+++ b/src/pages/how-to-contribute/contribute-pictograms.mdx
@@ -58,7 +58,7 @@ Don’t see the pictogram you need in the library? Make your own! Follow these g
 1. Click `Make Exportable` at the bottom of the right toolbar in Sketch.
 1. In the `Export` widget select `SVG` in the format dropdown.
 1. Click `Export ‘Artboard-Name’`.
-1. Name icon with the `#name--modifier` convention. (ex. copy.svg, copy—glyph.svg, add.svg, add—glyph.svg).
+1. Name icon with the `#name--modifier` convention (ex. copy.svg, copy—glyph.svg, add.svg, add—glyph.svg).
 
 ### Export SVGs from Adobe Illustrator.
 
@@ -73,7 +73,6 @@ Don’t see the pictogram you need in the library? Make your own! Follow these g
 1. Click `Save`.
 1. The `SVG Options` dialog will then open.
 1. Make sure the preferences are the same as in the image below.
-1. SVG export options image
 
 <Row>
 <Column colMd={6} colLg={6}>
