fix: art direction white space

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -13,9 +13,11 @@ export default HomepageTemplate;
 
 <ArtDirection>
 
-![Get started for designers](homepage/images/getting-started-designers-mobile.png)
-![Get started for designers](homepage/images/getting-started-designers-tablet.png)
-![Get started for designers](homepage/images/getting-started-designers.png)
+![Get started for designers](./homepage/images/getting-started-designers-mobile.png)
+
+![Get started for designers](./homepage/images/getting-started-designers-tablet.png)
+
+![Get started for designers](./homepage/images/getting-started-designers.png)
 
 </ArtDirection>
 
@@ -32,9 +34,11 @@ export default HomepageTemplate;
 
 <ArtDirection>
 
-![Get started for developers](homepage/images/getting-started-developers-mobile.png)
-![Get started for designers](homepage/images/getting-started-developers-tablet.png)
-![Get started for developers](homepage/images/getting-started-developers.png)
+![Get started for developers](./homepage/images/getting-started-developers-mobile.png)
+
+![Get started for designers](./homepage/images/getting-started-developers-tablet.png)
+
+![Get started for developers](./homepage/images/getting-started-developers.png)
 
 </ArtDirection>
 
@@ -127,7 +131,7 @@ building websites and user interfaces. See a
     href="https://theblog.adobe.com/adobe-and-ibm-ix-extend-partnership-to-help-enterprises-design-powerful-and-consistent-customer-experiences/"
     >
 
-![](homepage/images/xd_kit_img.jpg)
+![](./homepage/images/xd_kit_img.jpg)
 
 </ArticleCard>
 </Column>
