fix: add alt text

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -118,7 +118,7 @@ building websites and user interfaces. See a
     href="https://medium.com/carbondesign/seven-new-ux-patterns-for-carbon-f4a18c20c535"
     >
 
-![](resources/images/patterns_announcement.png)
+![New ux patterns announcement](resources/images/patterns_announcement.png)
 
 </ArticleCard>
 </Column>
@@ -131,7 +131,7 @@ building websites and user interfaces. See a
     href="https://theblog.adobe.com/adobe-and-ibm-ix-extend-partnership-to-help-enterprises-design-powerful-and-consistent-customer-experiences/"
     >
 
-![](./homepage/images/xd_kit_img.jpg)
+![Adobe and IBM partnership](./homepage/images/xd_kit_img.jpg)
 
 </ArticleCard>
 </Column>
@@ -145,7 +145,7 @@ building websites and user interfaces. See a
     href="https://medium.com/carbondesign/october-release-fadc38b757ad"
     >
 
-![](resources/images/v10.7-release.png)
+![New in Carbon article](resources/images/v10.7-release.png)
 
 </ArticleCard>
 </Column>
