added responsive styling - need to figure out ellipsis

--- a/src/pages/community/component-index.mdx
+++ b/src/pages/community/component-index.mdx
@@ -3,6 +3,11 @@ title: Component index
 description: Hello there
 ---
 
-import ComponentIndexPage from "../../components/ComponentIndexPage";
+import ComponentIndexPage from '../../components/ComponentIndexPage';
+
+These components are developed and maintained by members of the IBM Carbon
+community and are currently only accessible to IBMers. They may change over
+time, and they may be incomplete or experimental. For support, please contact
+the contributors listed on each page.
 
 <ComponentIndexPage />
