Add code snippets to contribute-pictograms (#1446)
* Add code snippets to contribute-pictograms

Add code snippets in the instructions section of the contribute-pictograms page.

* Add code snippets to pictograms - contribute

add code snippets to the export section in guidelines>pictograms>contribute

* remove extra line in list, correct typos

* remove line from list + correwct typo

--- a/src/pages/guidelines/pictograms/contribute.mdx
+++ b/src/pages/guidelines/pictograms/contribute.mdx
@@ -65,41 +65,35 @@ guidelines to ensure visual consistency and proper formatting.
 ### Export SVGs from Sketch.
 
 1. Draw a 32 x 32 px artboard. 32 px pictograms should have 1 px padding.
-1. Place the pictogram squarely on the artboard, making sure it’s aligned to the
-   pixel grid.
-1. Convert all strokes to outlines(Shift + ⌘ + O)
-1. Select any overlapping shapes and click the Union icon from the top
-   navigation to merge all of the shapes together.
-1. Make sure the icon is at #000000 and has no additional styling.
+1. Place the pictogram squarely on the artboard, making sure it’s aligned to the pixel grid.
+1. Convert all strokes to outlines `Shift + ⌘ + O`.
+1. Select any overlapping shapes and click the `Union` icon from the top navigation to merge all of the shapes together.
+1. Make sure the icon is at `#000000` and has no additional styling.
 1. Select the entire artboard (not just the icon).
-1. Click Make Exportable at the bottom of the right toolbar in Sketch.
-1. In the Export widget select “SVG” in the format dropdown.
-1. Click Export 'Artboard-Name'.
-1. Name icon with the #name--modifier convention. (ex. copy.svg, copy—glyph.svg,
-   add.svg, add—glyph.svg).
+1. Click `Make Exportable` at the bottom of the right toolbar in Sketch.
+1. In the `Export` widget select `SVG` in the format dropdown.
+1. Click `Export ‘Artboard-Name’`.
+1. Name icon with the `#name--modifier` convention (ex. copy.svg, copy—glyph.svg, add.svg, add—glyph.svg).
+
 
 ### Export SVGs from Adobe Illustrator.
 
 1. Draw a 32 x 32 px artboard. 32 px pictograms should have 1 px padding.
-1. Place the icon squarely on the artboard, making sure it’s aligned to the
-   pixel grid.
-1. Expand all strokes (Object > Expand).
-1. Select all overlapping shapes and click the “Unite” icon in the Pathfinder
-   panel to merge all of the shapes together.
-1. Make sure the icon is at #000000 and has no additional styling.
-1. Select File > Save a Copy… from the top navigation.
-1. On the Format dropdown select “SVG”.
-1. Below Format select Use Artboard, then select either all or a range of
-   artboards, depending on your need.
-1. Click Save.
-1. The SVG Options dialog will then open.
+1. Place the icon squarely on the artboard, making sure it’s aligned to the pixel grid.
+1. Expand all strokes `Object > Expand`.
+1. Select all overlapping shapes and click the `Unite` icon in the `Pathfinder` panel to merge all of the shapes together.
+1. Make sure the icon is at `#000000` and has no additional styling.
+1. Select `File > Save a Copy…` from the top navigation.
+1. On the Format dropdown select `SVG`.
+1. Below `Format` select `Use Artboard`, then select either all or a range of artboards, depending on your need.
+1. Click `Save`.
+1. The `SVG Options` dialog will then open.
 1. Make sure the preferences are the same as in the image below.
-1. SVG export options image
 
 <Row>
 <Column colMd={6} colLg={6}>
 
-![](images/iconography-contribution-exportsvgfromai.png)
+![SVG export options image](images/iconography-contribution-exportsvgfromai.png)
 
 </Column>
 </Row>
