--- a/src/pages/guidelines/accessibility/color.mdx
+++ b/src/pages/guidelines/accessibility/color.mdx
@@ -124,8 +124,8 @@ plugin.
 <Row className="resource-card-group">
 <Column colMd={4} colLg={4} noGutterSm>
 <ResourceCard
-    subTitle="IBM Accessibility quick guidance (IBM only)"
-    href="https://w3.ibm.com/able/devtest/quick/"
+    subTitle="IBM Equal Access Toolkit"
+    href="https://www.ibm.com/able/toolkit"
      >
 
 ![IBM bee icon](images/bee.svg)
